Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanTextField.quorum
class Main
    text v = text
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
